# xmonad-splintah

./: .gitignore  README.org  build  flake.nix
xmonad-splintah/: .stylish-haskell.yaml  default.nix  nixpkgs.nix  shell.nix  xmonad-splintah.cabal  xmonad-splintah.nix
xmonad-splintah/src/: Colours.hs  MPRIS.hs  Main.hs  Mpris.hs  Polybar.hs  XResources.hs
xmonad-splintah/src/Scripts/: Clipboard.hs  MicLed.hs  MpvClip.hs  Screenshot.hs  SwitchKeyboard.hs
