cabal-version:       2.4

name:                xmonad-splintah
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Splinter Suidman
-- maintainer:
-- copyright:
-- category:
-- extra-source-files:

executable xmonad-splintah
  main-is:             Main.hs
  other-modules:       Colours
                     , Polybar
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , xmonad ^>=0.15
                     , xmonad-contrib ^>=0.16
                     , X11 ^>=1.9
                     , containers ^>=0.6
                     , process ^>=1.6
  hs-source-dirs:      src
  default-language:    Haskell2010
